# cibench

./: Makefile  README.md
NERSC/smb/opt-msb1/msgrate/: msgrate.c
NERSC/smb/opt-msb2/msgrate/: Makefile  README  msgrate.c  run
NERSC/smb/org/msgrate/: Makefile  README  msgrate.c
bzip2/opt/: Makefile  blocksort.c  bzip2_base.reuse  bzlib.c  text.html.err
bzip2/org/: Makefile  huffman.c.bz2  speccmds.cmd  speccmds.out  speccmds.stdout  test.sh
gsl-2.5/: README
gsl-2.5/opt/fft/: c_radix2.c
gsl-2.5/org/: configure
gsl-2.5/test-fft/: Makefile  test.c  test.org
hoard/optimized/benchmarks/larson/: Makefile  run
hoard/optimized/src/: GNUmakefile  test.sh
hoard/optimized/src/source/: libhoard.cpp  unixtls.cpp
hoard/optimized/src/test/: mtest
hoard/original/benchmarks/larson/: Makefile  larson.cpp
hoard/original/src/: GNUmakefile  test1.sh
rodinia_3.1/openmp/backprop/opt/: Makefile  README  backprop.c
rodinia_3.1/openmp/backprop/org/: Makefile  backprop.c
rodinia_3.1/openmp/hotspot3D/opt/: 3D.c  Makefile
rodinia_3.1/openmp/hotspot3D/org/: Makefile
rodinia_3.1/openmp/lavaMD/opt/: makefile
rodinia_3.1/openmp/lavaMD/opt/kernel/: kernel_cpu.c
rodinia_3.1/openmp/lavaMD/org/: makefile  run
rodinia_3.1/openmp/srad_v2/opt/: Makefile  srad.cpp
rodinia_3.1/openmp/srad_v2/org/: Makefile
usqcd/: README.md
usqcd/chroma/chroma-opt/: configure
usqcd/chroma/chroma-opt/autom4te.cache/: output.1  requests  traces.0  traces.1
usqcd/chroma/chroma-opt/mainprogs/: Makefile.in
usqcd/chroma/chroma-opt/mainprogs/main/: Makefile.in
usqcd/chroma/chroma-opt/mainprogs/tests/: Makefile.in  t_mesplq.cc
usqcd/chroma/chroma-org/: Makefile.in
usqcd/chroma/chroma-org/docs/: Makefile.in
usqcd/chroma/chroma-org/lib/: Makefile.in
usqcd/chroma/chroma-org/lib/util/ferm/: key_prop_distillution.h
usqcd/chroma/chroma-org/other_libs/: Makefile.in
usqcd/chroma/chroma-org/other_libs/cpp_wilson_dslash/: Makefile.in  configure
usqcd/chroma/chroma-org/other_libs/cpp_wilson_dslash/autom4te.cache/: output.1  requests  traces.0  traces.1
usqcd/chroma/chroma-org/other_libs/cpp_wilson_dslash/include/: Makefile.in  dslash_config_internal.h.in~
usqcd/chroma/chroma-org/other_libs/cpp_wilson_dslash/lib/: Makefile.in
usqcd/chroma/chroma-org/other_libs/cpp_wilson_dslash/tests/: Makefile.in
usqcd/chroma/chroma-org/other_libs/qdp-lapack/: AUTHORS  Makefile.am  Makefile.in  acinclude.m4  configure  configure.ac
usqcd/chroma/chroma-org/other_libs/qdp-lapack/autom4te.cache/: output.1  traces.0  traces.1
usqcd/chroma/chroma-org/other_libs/qdp-lapack/include/: G_eval.h  Makefile.am  Makefile.in  bicgstab.h  conjugate.h  fortran_lapack.h  qdp-lapack.h  qdp-lapack_Complex.h  qdp-lapack_IncrEigbicg.h  qdp-lapack_IncrEigpcg.h  qdp-lapack_biortho.h  qdp-lapack_config_internal.h.in  qdp-lapack_config_internal.h.in~  qdp-lapack_eigbicg.h  qdp-lapack_eigpcg.h  qdp-lapack_fortran_lapack.h  qdp-lapack_numerical.h  qdp-lapack_numerical_private.h  qdp-lapack_ortho.h  qdp-lapack_restart_X.h  qdp-lapack_wtime.h  sort.h
usqcd/chroma/chroma-org/other_libs/qdp-lapack/lib/: Complex.c  G_eval.c  IncrEigbicg.c  IncrEigbicg_stub.c  IncrEigpcg.c  IncrEigpcg_orthogonalize.c  IncrEigpcg_stub.c  Makefile.am  Makefile.in  bicgstab.c  biortho.c  cdotcsub.f  conjugate.c  eigbicg.c  eigpcg.c  fortran_lapack.cc  lapack_stub.cc  numerical.c  ortho.c  restart_X.c  sort.c  wtime.c
usqcd/chroma/chroma-org/other_libs/sse_wilson_dslash/: AUTHORS  Makefile.in  NEWS  configure  configure.ac
usqcd/chroma/chroma-org/other_libs/sse_wilson_dslash/autom4te.cache/: output.0  traces.0  traces.1
usqcd/chroma/chroma-org/other_libs/sse_wilson_dslash/include/: Makefile.am  Makefile.in  decomp.h  decomp_hvv.h  dispatch_parscalar.h  dispatch_scalar.h  mvv_recons_32bit.h  mvv_recons_64bit.h  recons.h  shift_tables_parscalar.h  shift_tables_scalar.h  site_dslash_32bit_scalar.h  site_dslash_64bit_scalar.h  sse_align.h  sse_config.h  sse_config_internal.h.in  sse_dslash.h  sse_dslash_3d.h  sse_dslash_qdp_packer.h  sse_dslash_qdp_packer_3d.h  types32.h  types64.h
usqcd/chroma/chroma-org/other_libs/sse_wilson_dslash/lib/: Makefile.am  Makefile.in  decomp_32bit_parscalar.c  decomp_64bit_parscalar.c  decomp_hvv_32bit_parscalar.c  decomp_hvv_64bit_parscalar.c  dispatch_parscalar.c  dispatch_scalar.c  mvv_recons_32bit_parscalar.c  mvv_recons_64bit_parscalar.c  packer_nopad.c  packer_p4_pad.c  qdp_packer_3d.cc  qdp_packer_nopad.cc  qdp_packer_p4_pad.cc  recons_32bit_parscalar.c  recons_64bit_parscalar.c  shift_tables_parscalar.c  shift_tables_parscalar_3d.c  shift_tables_scalar.c  shift_tables_scalar_3d.c  site_dslash_32bit_scalar.c  site_dslash_64bit_scalar.c  (+8 more)
usqcd/chroma/chroma-org/other_libs/wilsonmg/: AUTHORS  Makefile.in  configure  configure.ac
usqcd/chroma/chroma-org/other_libs/wilsonmg/autom4te.cache/: output.0  requests  traces.0  traces.1
usqcd/chroma/chroma-org/other_libs/wilsonmg/include/: Makefile.am  Makefile.in  generic_d.h  generic_f.h  generic_undef.h  solvers.h  wilsonmg-interface.h  wilsonmg_config.h  wilsonmg_config_internal.h.in  wilsonmg_config_internal.h.in~  wilsonmg_p.h
usqcd/chroma/chroma-org/other_libs/wilsonmg/lib/: Makefile.am  Makefile.bak  Makefile.in  wilsonmg_d.c  wilsonmg_f.c  wilsonmg_p.c
usqcd/qdpxx/qdpxx-opt/autom4te.cache/: output.1  requests  traces.0  traces.1
usqcd/qdpxx/qdpxx-opt/examples/: Makefile.in
usqcd/qdpxx/qdpxx-opt/include/: qdp_random.h
usqcd/qdpxx/qdpxx-opt/other_libs/: Makefile.in
usqcd/qdpxx/qdpxx-opt/other_libs/filedb/: Makefile.in  configure
usqcd/qdpxx/qdpxx-opt/other_libs/libintrin/: COPYING  configure
usqcd/qdpxx/qdpxx-opt/other_libs/xpath_reader/: Makefile.in  configure  configure.ac
usqcd/qdpxx/qdpxx-opt/tests/: Makefile.in
usqcd/qdpxx/qdpxx-org/: Makefile.in  configure
usqcd/qdpxx/qdpxx-org/other_libs/filedb/: aclocal.m4
usqcd/qdpxx/qdpxx-org/other_libs/libintrin/: Makefile.in
usqcd/qdpxx/qdpxx-org/other_libs/qio/: Makefile.in  configure  configure.ac
usqcd/qdpxx/qdpxx-org/other_libs/xpath_reader/: acinclude.m4
(+91 files in other folders)
